deployments/kubernetes/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: bash-brothers
  namespace: bash-brothers
  labels:
    app: bash-brothers
spec:
  selector:
    app: bash-brothers
  ports:
    - name: http
      port: 80
      targetPort: 8080
