deployments/kubernetes/ingress.yml
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: bash-brothers
  namespace: bash-brothers
spec:
  routes:
    - services:
        - name: bash-brothers
          port: 80

---
kind: HTTPProxy
apiVersion: projectcontour.io/v1
metadata:
  name: bash-brothers
  namespace: projectcontour
spec:
  virtualhost:
    fqdn: bash-brothers.net
  includes:
    - name: bash-brothers
      namespace: bash-brothers
